tests/local/missing-features/missing-import-field.wast
(assert_invalid
  (module
    (import "" (func))
  )
  "module linking proposal is not enabled")

